<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/messageInputLayout"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="-5dp"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <LinearLayout
            android:id="@+id/chatContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Sent message bubble -->
            <LinearLayout
                android:id="@+id/sentMessageLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:id="@+id/sentMessageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sent_message_bubble"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.8"
                    tools:text="Sent Message" />

            </LinearLayout>

            <!-- Received message bubble -->
            <LinearLayout
                android:id="@+id/receivedMessageLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="160dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/receivedMessageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/received_message_bubble"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    tools:text="Received Message" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/messageInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF">

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="102dp"
            android:layout_marginBottom="8dp"
            android:autofillHints=""
            android:background="#EEEEEE"
            android:hint="@string/type_your_message_here"
            android:minHeight="48dp"
            android:padding="8dp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:text="@string/send"
            tools:ignore="RelativeOverlap" />
        <!-- Add this button to trigger voice input -->
        <ImageButton
            android:id="@+id/voiceInputButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="110dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/voice_input_button_description"
            android:src="@drawable/ic_mic" />


    </RelativeLayout>

</RelativeLayout>
